tests/machine/x/cpp/left_join_multi.error
line 19: ../../../tests/machine/x/cpp/left_join_multi.cpp:19:12: error: ‘i’ was not declared in this scope
   19 |   decltype(i) item;
      |            ^
../../../tests/machine/x/cpp/left_join_multi.cpp:19:12: error: ‘i’ was not declared in this scope
../../../tests/machine/x/cpp/left_join_multi.cpp: In lambda function:
../../../tests/machine/x/cpp/left_join_multi.cpp:42:55: error: cannot convert ‘__struct3’ to ‘int’ in initialization
   42 |             __items.push_back(__struct4{o.id, c.name, i});
      |                                                       ^
      |                                                       |
      |                                                       __struct3
../../../tests/machine/x/cpp/left_join_multi.cpp:46:55: error: cannot convert ‘__struct3’ to ‘int’ in initialization
   46 |             __items.push_back(__struct4{o.id, c.name, i});
      |                                                       ^
      |                                                       |
      |                                                       __struct3

 18 |   decltype(std::declval<__struct1>().name) name;
 19 |   decltype(i) item;
 20 | };
